--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -48,6 +48,7 @@ button:active {
 button {
   font-weight: bold;
   font-size: 2rem;
+  display: block;
   margin: 0 auto;
   cursor: pointer;
   padding: 0.1em 0.3em;
